Refactoring of conversation interfaces.